tests/tests/checks/snapshots/analysis/cpp/atom_list.h/main@NESTED_YO_ATOM.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
snapshot_kind: text
---
[
  {
    "loc": "00007:8-22",
    "source": 1,
    "syntax": "def,macro",
    "pretty": "macro NESTED_YO_ATOM",
    "sym": "M_0394aa68e2615984"
  },
  {
    "loc": "00007:8-22",
    "target": 1,
    "kind": "def",
    "pretty": "NESTED_YO_ATOM",
    "sym": "M_0394aa68e2615984"
  },
  {
    "loc": "00009:0-14",
    "source": 1,
    "syntax": "use,macro",
    "pretty": "macro NESTED_YO_ATOM",
    "sym": "M_0394aa68e2615984",
    "expandsTo": {
      "M_0394aa68e2615984,M_4d6d7abfa63cac6d": {
        "": "Baz,"
      }
    }
  },
  {
    "loc": "00009:0-14",
    "source": 1,
    "syntax": "use,macro",
    "pretty": "macro NESTED_YO_ATOM",
    "sym": "M_0394aa68e2615984",
    "expandsTo": {
      "M_0394aa68e2615984,M_f81c7abfa63cac6d": {
        "": "const char16_t Baz_string[sizeof(\"baz\")];"
      }
    }
  },
  {
    "loc": "00009:0-14",
    "target": 1,
    "kind": "use",
    "pretty": "NESTED_YO_ATOM",
    "sym": "M_0394aa68e2615984"
  }
]
